# GS_GIS_FHWS

./: README.md
Jetson_configure/: OpenCV_4.5_HowTo.txt
basic/ex0/: main.cpp
basic/ex1/: main.cpp
basic/ex2/: CMakeLists.txt  datos.txt  datos2.txt  main.cpp
classes/ex3/: CMakeLists.txt  Complejo.cpp  Complejo.h  complejos.mdj  main.cpp
classes/ex4/: polinomio.mdj
classes/ex4/polinomios_stl/: CMakeLists.txt  Polinomio.cpp  Polinomio.h  main.cpp
images_processing/ex10_contours/: CMakeLists.txt  main_all.cpp  main_one.cpp
images_processing/ex11/: CMakeLists.txt  main_all.cpp  main_one.cpp
images_processing/ex12_color/: CMakeLists.txt  main_one.cpp
images_processing/ex13_NDVI/: CMakeLists.txt  main_all.cpp  main_one.cpp
images_processing/ex5_transform/: CMakeLists.txt  main_all.cpp  main_one.cpp
images_processing/ex6_GPU_transform/: CMakeLists.txt  main_all.cpp  main_one.cpp
images_processing/ex7_filters/: CMakeLists.txt  main_all.cpp  main_one.cpp
images_processing/ex8_derivatives/: CMakeLists.txt  main_one.cpp
images_processing/ex9_canny/: CMakeLists.txt  main_one.cpp
images_processing/multispectral/: IMG_170510_171032_0037_GRE.TIF  IMG_170510_171032_0037_NIR.TIF  IMG_170510_171032_0037_RED.TIF  IMG_170510_171032_0037_REG.TIF  IMG_170510_171034_0038_GRE.TIF  IMG_170510_171034_0038_NIR.TIF  IMG_170510_171034_0038_RED.TIF  IMG_170510_171034_0038_REG.TIF
portfolio/: CMakeLists.txt  main.cpp
